--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <!-- HEADER -->
 <header>
-  <img src="./assets/img/download (1).jpg (1).jpg" 
+  <img src="./assets/img/download (1).jpg" 
        alt="Ice cream banner"
        style="width:100%; height:350px; object-fit:cover; border-radius:8px;">
   <h1>Welcome to Divine Ice Cream</h1>
